fix(hero): lower logo even more for perfect alignment with text

--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -201,13 +201,13 @@ footer {
   width: auto;
   vertical-align: middle;
   margin: 0;
-  margin-top: 1.7rem;
+  margin-top: 2.3rem;
   animation: glitchIn 2s ease forwards, glitch 2s infinite linear 1.5s;
 }
 @media (max-width: 700px) {
   .hero-logo.bithead-logo {
     height: 2.7rem !important;
-    margin-top: 1.1rem;
+    margin-top: 1.6rem;
   }
 }
 .hero-title {
